# Holland-Consciousness-Scaling-Engine-HCSE

./: CITATION.cff  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: python-publish.yml
hcse/: __init__.py  core.py  pipeline.py  pyproject.toml  utils.py
hcse/.github/workflows/: ci.yml
hcse/examples/: run_hcse_example.py
hcse/hcse/: core.py  utils.py
hcse/tests/: test_core.py  test_pipeline.py
holland_dual/: __init__.py
holland_dual/cognition/: __init__.py
holland_dual/fusion/: __init__.py  adapter.py
holland_dual/quantum/: __init__.py
holland_dual/quantum/huqce/: analysis.py  solver.py
holland_dual/shared/: __init__.py  cli.py
holland_dual/tests/: test_cli.py  test_fusion.py
huqce/: __init__.py  analysis.py  pyproject.toml  simulation.py  solver.py
huqce/tests/: test_analysis.py  test_simulation.py
tests/: test_core.py
