[project]
name = "hcse"
version = "0.1.0"
authors = [{name = "Phillip Holland"}]
description = "Holland Consciousness Scaling Engine"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["torch", "transformers"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
