[project]
name = "huqce"
version = "0.1.0"
authors = [{name = "Phillip Holland"}]
description = "Holland Universal Quantum Computing Engine"
requires-python = ">=3.8"
dependencies = ["numpy"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["huqce"]
package-dir = {"huqce" = "."}
